test_scores/negative_dimers/features/P35222.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P35222.pkl.xz